# crakd

./: .gitignore  README.md  crakd_final_diagram.md  package-lock.json  package.json  product_specification.txt
backend/: Dockerfile  README.md  cli.py  pyproject.toml  requirements.txt
backend/app/: analysis.py  api.py  gemini_client.py  github_client.py  models.py  ranking.py  utils.py  xai_client.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/components/: LandingPage.jsx  NebulaSketch.jsx  Results.jsx
frontend/src/hooks/: useTypingAnimation.js
frontend/src/styles/: LandingPage.css  Results.css
frontend/src/utils/: nebula-utils.js  utils.js
